index.html and main.css are close to finished, started on portfolio.html - need to ensure that the layout is correct before going much furthur. Will look into spacing and responsiveness soon

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,17 +50,20 @@
                         <!-- Body of the About Me section -->
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h1 class="panel-title">About Me</h1>
+                                <h1 class="panel-title">Portfolio</h1>
                             </div>
-                            <div class="panel-body">
-                                <!-- Profile Picture -->
-                                <img src="assets/images/paul.png" class="pull-left img-responsive" id="profilePic" /> 
-                                <p>My name is Paul Laird, I’m a husband to a phenomenal wife, father of three awesome children, the sole financial provider for my family, and I just quit my corporate job. This might seem absurd but hear me out.</p>
-                                <p>I’m also an outdoors enthusiast, entrepreneur, and web developer. I love being outdoors and staying active, something my desk job would never allow. I find businesses fascinating! I’ve created a couple small businesses myself and it’s something I truly enjoy. Being creative and implementing a variety of business systems is not something I had the freedom to do locked in my office. It was time to break up with that oppressive relationship I called a job. I didn’t walk away from the paycheck, but rather I opened the door to my own creativity.</p>
-                                <p>You see, to me success is measured by the lives I impact, the experiences I share and the memories that are created. That is why I quit my job, to help people just like you.</p>
-                                <p>If you have an interesting project you'd like to talk about, let me know!</p>
-                                <p>Together, we will build something great.</p>
+                            <!-- THIS IS TEST CODE -->
+
+                            <div class="row" id="box-search">
+                                <div class="thumbnail text-center">
+                                    <img src="assets/images/deals.jpg" alt="Making Deals" class="img-responsive">
+                                    <div class="caption">
+                                        <p>Making Deals</p>
+                                    </div>
+                                </div>
                             </div>
+
+                            <!-- THIS IS TEST CODE -->
                         </div>
                     </div>
                 </div>
