added portfolio.html, contact.html and got pages close to final result. Needs a bit more tweaking which I will go over in office hours

--- a/index.html
+++ b/index.html
@@ -39,65 +39,77 @@
     </nav>
     <!-- NAVBAR CODE BETWEEN THESE LINES -->
 
+
+
     <!-- Main body of the webpage -->
-    <div>
+    <div class="container">
         <!-- Row 1 of 2 (For the content of the webpage) -->
         <div class="row">
-            <div class="container">
-                <!-- About me section -->
-                <div class="col-md-8">
-                    <div class="aboutMe">
-                        <!-- Body of the About Me section -->
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h1 class="panel-title">About Me</h1>
-                            </div>
-                            <div class="panel-body">
-                                <!-- Profile Picture -->
-                                <img src="assets/images/paul.png" class="pull-left img-responsive" id="profilePic" /> 
-                                <p>My name is Paul Laird, I’m a husband to a phenomenal wife, father of three awesome children, the sole financial provider for my family, and I just quit my corporate job. This might seem absurd but hear me out.</p>
-                                <p>I’m also an outdoors enthusiast, entrepreneur, and web developer. I love being outdoors and staying active, something my desk job would never allow. I find businesses fascinating! I’ve created a couple small businesses myself and it’s something I truly enjoy. Being creative and implementing a variety of business systems is not something I had the freedom to do locked in my office. It was time to break up with that oppressive relationship I called a job. I didn’t walk away from the paycheck, but rather I opened the door to my own creativity.</p>
-                                <p>You see, to me success is measured by the lives I impact, the experiences I share and the memories that are created. That is why I quit my job, to help people just like you.</p>
-                                <p>If you have an interesting project you'd like to talk about, let me know!</p>
-                                <p>Together, we will build something great.</p>
-                            </div>
+
+            <!-- About me section -->
+            <div class="col-md-8">
+                <div class="aboutMe">
+                    <!-- Body of the About Me section -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h1 class="panel-title">About Me</h1>
+                        </div>
+                        <div class="panel-body">
+                            <!-- Profile Picture -->
+                            <img src="assets/images/paul.png" class="pull-left img-responsive" id="profilePic" />
+                            <p>My name is Paul Laird, I’m a husband to a phenomenal wife, father of three awesome children,
+                                the sole financial provider for my family, and I just quit my corporate job. This might seem
+                                absurd but hear me out.</p>
+                            <p>I’m also an outdoors enthusiast, entrepreneur, and web developer. I love being outdoors and staying
+                                active, something my desk job would never allow. I find businesses fascinating! I’ve created
+                                a couple small businesses myself and it’s something I truly enjoy. Being creative and implementing
+                                a variety of business systems is not something I had the freedom to do locked in my office.
+                                It was time to break up with that oppressive relationship I called a job. I didn’t walk away
+                                from the paycheck, but rather I opened the door to my own creativity.</p>
+                            <p>You see, to me success is measured by the lives I impact, the experiences I share and the memories
+                                that are created. That is why I quit my job, to help people just like you.</p>
+                            <p>If you have an interesting project you'd like to talk about, let me know!</p>
+                            <p>Together, we will build something great.</p>
                         </div>
                     </div>
                 </div>
+            </div>
 
 
-                <!-- Connect with me section -->
-                <div class="contact">
-                    <div class="col-md-4">
-                        <div class="panel panel-default text-center">
-                            <div class="panel-heading">
-                                <h2 class="panel-title">Connect with me</h2>
-                            </div>
-                            <div class="panel-body">
-                                <!-- LINKS IN THE CONNECT WITH ME SECTION GO BETWEEN THESE LINES -->
-                                <!-- GitHub link -->
-                                <a class="social" href="https://github.com/PaulLNH" target="_blank">
-                                    <!-- GitHub logo -->
-                                    <img class="img-thumbnail img-responsive" src="assets/images/github.png" alt="Check out my GitHub!">
-                                </a>
-                                <!-- LinkedIn link -->
-                                <a class="social" href="https://www.linkedin.com/in/paul-laird/" target="_blank">
-                                    <!-- LinkedIn logo -->
-                                    <img class="img-thumbnail img-responsive" src="assets/images/linkedin.png" alt="Follow me on LinkedIn.">
-                                </a>
-                                <!-- Stack Overflow link -->
-                                <a class="social" href="https://stackoverflow.com/story/paullaird" target="_blank">
-                                    <!-- Stack Overflow logo -->
-                                    <img class="img-thumbnail img-responsive" src="assets/images/stackoverflow.png" alt="See what I have to say on Stack Overflow">
-                                </a>
-                                <!-- LINKS IN THE CONNECT WITH ME SECTION GO BETWEEN THESE LINES -->
-                            </div>
+            <!-- Connect with me section -->
+            <div class="contact">
+                <div class="col-md-4">
+                    <div class="panel panel-default text-center">
+                        <div class="panel-heading">
+                            <h2 class="panel-title">Connect with me</h2>
+                        </div>
+                        <div class="panel-body">
+                            <!-- LINKS IN THE CONNECT WITH ME SECTION GO BETWEEN THESE LINES -->
+                            <!-- GitHub link -->
+                            <a class="social" href="https://github.com/PaulLNH" target="_blank">
+                                <!-- GitHub logo -->
+                                <img class="img-thumbnail img-responsive" src="assets/images/github.png" alt="Check out my GitHub!">
+                            </a>
+                            <!-- LinkedIn link -->
+                            <a class="social" href="https://www.linkedin.com/in/paul-laird/" target="_blank">
+                                <!-- LinkedIn logo -->
+                                <img class="img-thumbnail img-responsive" src="assets/images/linkedin.png" alt="Follow me on LinkedIn.">
+                            </a>
+                            <!-- Stack Overflow link -->
+                            <a class="social" href="https://stackoverflow.com/story/paullaird" target="_blank">
+                                <!-- Stack Overflow logo -->
+                                <img class="img-thumbnail img-responsive" src="assets/images/stackoverflow.png" alt="See what I have to say on Stack Overflow">
+                            </a>
+                            <!-- LINKS IN THE CONNECT WITH ME SECTION GO BETWEEN THESE LINES -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+
     <!-- Row 2 of 2 (For the footer) -->
     <!-- <div class="row">
             <div class="panel panel-primary col-md-12">
