--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-    <!-- NAVBAR CODE BETWEEN THESE LINES -->
+    <!-- START NAVBAR -->
+
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
             <!-- Logo -->
@@ -37,76 +38,129 @@
             </ul>
         </div>
     </nav>
-    <!-- NAVBAR CODE BETWEEN THESE LINES -->
+    <!-- END OF NAVBAR -->
 
     <!-- Main body of the webpage -->
-    <div>
+    <div class="container">
         <!-- Row 1 of 2 (For the content of the webpage) -->
         <div class="row">
-            <div class="container">
-                <!-- About me section -->
-                <div class="col-md-8">
-                    <div class="aboutMe">
-                        <!-- Body of the About Me section -->
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h1 class="panel-title">Portfolio</h1>
-                            </div>
-                            <!-- THIS IS TEST CODE -->
+            <div class="col-md-8">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h1 class="panel-title">Portfolio</h1>
+                    </div>
 
-                            <div class="row" id="box-search">
-                                <div class="thumbnail text-center">
-                                    <img src="assets/images/deals.jpg" alt="Making Deals" class="img-responsive">
+                    <div class="panel-body">
+
+                        <!-- About me section -->
+
+                        <!-- Body of the About Me section -->
+                        <!-- MAKING DEALS WEBPAGE -->
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="thumbnail">
+                                    <img src="assets/images/deals.jpg" alt="Making Deals">
                                     <div class="caption">
-                                        <p>Making Deals</p>
+                                        <!-- PLEASE REVISIT THIS! WHEN CSS IS NOT ABSOLUTE (BANNER AT BASE OF PIC) IT'S CORRECT WIDTH, WHEN ABOLUTE IT GETS WIDER ON THE RIGHT -->
+                                        <h4 class="text-center bannerColor">Making Deals</h4>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- THIS IS TEST CODE -->
+                            <!-- ESPORTS WEBPAGE -->
+                            <div class="col-sm-6">
+                                <div class="thumbnail">
+                                    <img src="assets/images/eSports.jpg" alt="eSports">
+                                    <div class="caption">
+                                        <h4 class="text-center bannerColor">eSports</h4>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+
+                        <!-- WORKING OUT WEBPAGE -->
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="thumbnail">
+                                    <img src="assets/images/gym.jpg" alt="Those sweet gainz">
+                                    <div class="caption">
+                                        <h4 class="text-center bannerColor">Working Out</h4>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- HIKE NH WEBPAGE -->
+                            <div class="col-sm-6">
+                                <div class="thumbnail">
+                                    <img src="assets/images/hikeNH.jpg" alt="Explore NH">
+                                    <div class="caption">
+                                        <h4 class="text-center bannerColor">Hike NH</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- NIGHT SKY WEBPAGE -->
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="thumbnail">
+                                    <img src="assets/images/stars.jpg" alt="Night Sky">
+                                    <div class="caption">
+                                        <h4 class="text-center bannerColor">Night Sky</h4>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <!-- Placeholder Space -->
+                            </div>
+                        </div>
+
                     </div>
                 </div>
+            </div>
+            <!-- End of the ontainer for the portfolio -->
+            <!-- END OF ABOUT ME SECTION -->
 
 
-                <!-- Connect with me section -->
-                <div class="contact">
-                    <div class="col-md-4">
-                        <div class="panel panel-default text-center">
-                            <div class="panel-heading">
-                                <h2 class="panel-title">Connect with me</h2>
-                            </div>
-                            <div class="panel-body">
-                                <!-- LINKS IN THE CONNECT WITH ME SECTION GO BETWEEN THESE LINES -->
-                                <!-- GitHub link -->
-                                <a class="social" href="https://github.com/PaulLNH" target="_blank">
-                                    <!-- GitHub logo -->
-                                    <img class="img-thumbnail img-responsive" src="assets/images/github.png" alt="Check out my GitHub!">
-                                </a>
-                                <!-- LinkedIn link -->
-                                <a class="social" href="https://www.linkedin.com/in/paul-laird/" target="_blank">
-                                    <!-- LinkedIn logo -->
-                                    <img class="img-thumbnail img-responsive" src="assets/images/linkedin.png" alt="Follow me on LinkedIn.">
-                                </a>
-                                <!-- Stack Overflow link -->
-                                <a class="social" href="https://stackoverflow.com/story/paullaird" target="_blank">
-                                    <!-- Stack Overflow logo -->
-                                    <img class="img-thumbnail img-responsive" src="assets/images/stackoverflow.png" alt="See what I have to say on Stack Overflow">
-                                </a>
-                                <!-- LINKS IN THE CONNECT WITH ME SECTION GO BETWEEN THESE LINES -->
-                            </div>
+
+            <!-- Connect with me section -->
+            <div class="contact">
+                <div class="col-md-4">
+                    <div class="panel panel-default text-center">
+                        <div class="panel-heading">
+                            <h2 class="panel-title">Connect with me</h2>
+                        </div>
+                        <div class="panel-body">
+                            <!-- LINKS IN THE CONNECT WITH ME SECTION GO BETWEEN THESE LINES -->
+                            <!-- GitHub link -->
+                            <a class="social" href="https://github.com/PaulLNH" target="_blank">
+                                <!-- GitHub logo -->
+                                <img class="img-thumbnail img-responsive" src="assets/images/github.png" alt="Check out my GitHub!">
+                            </a>
+                            <!-- LinkedIn link -->
+                            <a class="social" href="https://www.linkedin.com/in/paul-laird/" target="_blank">
+                                <!-- LinkedIn logo -->
+                                <img class="img-thumbnail img-responsive" src="assets/images/linkedin.png" alt="Follow me on LinkedIn.">
+                            </a>
+                            <!-- Stack Overflow link -->
+                            <a class="social" href="https://stackoverflow.com/story/paullaird" target="_blank">
+                                <!-- Stack Overflow logo -->
+                                <img class="img-thumbnail img-responsive" src="assets/images/stackoverflow.png" alt="See what I have to say on Stack Overflow">
+                            </a>
+                            <!-- LINKS IN THE CONNECT WITH ME SECTION GO BETWEEN THESE LINES -->
                         </div>
                     </div>
                 </div>
             </div>
+
+
         </div>
     </div>
-    <!-- Row 2 of 2 (For the footer) -->
-    <!-- <div class="row">
-            <div class="panel panel-primary col-md-12">
-                Footer
-            </div>
-        </div> -->
+    <!-- END OF 1st ROW -->
+
+
+    <!-- BELOW IS THE FOOTER -->
+
     <div class="navbar navbar-default navbar-fixed-bottom">
         <div class="container" id="footerCSS">
             <p class="navbar-text text-center">
@@ -114,6 +168,8 @@
             </p>
         </div>
     </div>
+
+
 </body>
 
 </html>
