Fixed logo spacing, fixed banner text and adjusted margin-botton on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
     <!-- END OF NAVBAR -->
 
     <!-- Main body of the webpage -->
-    <div class="container">
+    <main class="container">
         <!-- Row 1 of 2 (For the content of the webpage) -->
         <div class="row">
             <div class="col-md-8">
@@ -155,19 +155,19 @@
 
 
         </div>
-    </div>
+    </main>
     <!-- END OF 1st ROW -->
 
 
     <!-- BELOW IS THE FOOTER -->
 
-    <div class="navbar navbar-default navbar-fixed-bottom">
+    <footer class="navbar navbar-default navbar-fixed-bottom">
         <div class="container" id="footerCSS">
             <p class="navbar-text text-center">
                 <a href="http://laird.codes" target="_blank">© 2018 - Paul Laird</a>
             </p>
         </div>
-    </div>
+    </footer>
 
 
 </body>
