--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
                 Footer
             </div>
         </div> -->
-    <div class="navbar navbar-default navbar-fixed-bottom">
+    <footer class="navbar navbar-default navbar-fixed-bottom">
         <div class="container" id="footerCSS">
             <p class="navbar-text text-center">
                 <a href="http://laird.codes" target="_blank">© 2018 - Paul Laird</a>
             </p>
         </div>
-    </div>
+    </footer>
 </body>
 
 </html>
